--- a/m4_labels.ipynb
+++ b/m4_labels.ipynb
@@ -558,6 +558,22 @@
    "source": [
     "m4.to_csv('data/m4_gaia.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
